Sun, Jan 10, 2009
---------------------------------------------------------------------
- Implemented backend for [Opportunity/New].
- Refactored models validation code.

Fri, Jan 9, 2009
---------------------------------------------------------------------
- Converted [Opportunity/Show] to HAML and created [Opportunity/New] form (with backend stub).

Thu, Jan 8, 2009
---------------------------------------------------------------------
- Simplified submission for forms with account create/select.
- Added app-specific rake tasks -- app:setup, app:demo, and app:reset.
- Updated [uses_mysql_uuid] plugin to explicitly check for MySQL v5 or later.
- Updated database migrations and rake tasks to make them database-type neutral.
- Fat Free CRM now works with MySQL v4 and SQLite!

Wed, Jan 7, 2009
---------------------------------------------------------------------
- Implemented backend for [Contact/New].
- Made model functions more general for better code reuse.

Tue, Jan 6, 2009
---------------------------------------------------------------------
- Figured out how to make [has_one :through] work and save the join record.
- Restructured [uses_mysql_uuid] to use proper module nesting and extend base with SingletonMethods.
- Fixes in opportunity/index and contact/delete.
- Created [Contact/New] form (with backend stub).
- Moved common JavaScript functions to application namespace.

Mon, Jan 5, 2009
---------------------------------------------------------------------
- Finished refatoring [Lead/Convert].
- Started with index page for contacts.

Sun, Jan 4, 2009
---------------------------------------------------------------------
- Streamlined [Lead/Convert] to make it use objects and default values.
- Added [assigned_to] to accounts and [access] to opportunities.
- Updated [Account/New] form.

Sat, Jan 3, 2009
---------------------------------------------------------------------
- Refactoring of [Lead/Convert] using [fields_for].

Fri, Jan 2, 2009