@@ -33,7 +33,7 @@
   names << "Late night FM radio ads with the special offer"
   names << "Google AdWords campaign with optimized keywords"
   names << "Banner ads on partner websites"
-  names << "Co-marketing with wholesale distributors on East Coast"
+  names << "Holiday 10% off promotion for qualified customers"
   names << "Direct mail campaign with 10% off coupon"
   names << "Co-marketing with wholesale distributors on East Coast"
   names << "Family Sweepstakes"
