@@ -54,9 +54,9 @@ contact_<%= i %>:
   source      : <%= source[rand(source.size)] %>
   email       : <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name}#{last_name.first}@".downcase) %>
   alt_email   : <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name}#{rand(9999)}@".downcase) %>
-  phone       : <%= Faker::PhoneNumber.phone_number %>
-  mobile      : <%= Faker::PhoneNumber.phone_number %>
-  fax         : <%= Faker::PhoneNumber.phone_number if rand(10) < 5 %>
+  phone       : <%= Faker::PhoneNumber.phone_number if rand(10) < 8 %>
+  mobile      : <%= Faker::PhoneNumber.phone_number if rand(10) < 6 %>
+  fax         : <%= Faker::PhoneNumber.phone_number if rand(10) < 4 %>
   blog        : <%= "http://#{(first_name + last_name.first).downcase}.blogger.com" if rand(10) < 5 %>
   linkedin    : <%= "http://www.linkedin.com/#{(first_name + last_name.first).downcase}" if rand(10) < 4 %>
   facebook    : <%= "http://www.facebook.com/#{(first_name + last_name.first).downcase}" if rand(10) < 5 %>
